[package]
name    = "dynatos-web"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-sync-types = { path = "../dynatos-sync-types" }
dynatos-util       = { path = "../dynatos-util" }
dynatos-web-macros = { path = "../dynatos-web-macros" }
dynatos-web-parser = { path = "../dynatos-web-parser" }

app-error = { workspace = true }
duplicate = { workspace = true }
extend = { workspace = true }
itertools = { workspace = true }
js-sys = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { features = [
	"ClipboardEvent",
	"Comment",
	"CssStyleDeclaration",
	"Document",
	"DragEvent",
	"Element",
	"FocusEvent",
	"HtmlBodyElement",
	"HtmlCanvasElement",
	"HtmlElement",
	"HtmlImageElement",
	"HtmlInputElement",
	"HtmlTextAreaElement",
	"InputEvent",
	"PointerEvent",
	"PopStateEvent",
	"SubmitEvent",
	"Text",
	"WheelEvent",
	"Window",
], workspace = true }

[features]
sync = ["dynatos-sync-types/sync"]

[lints]
workspace = true
