[package]
name    = "dynatos-web"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
dynatos-store      = { default-features = false, path = "../dynatos-store" }
dynatos-sync-types = { default-features = false, path = "../dynatos-sync-types" }
dynatos-util       = { default-features = false, path = "../dynatos-util" }
dynatos-web-macros = { default-features = false, path = "../dynatos-web-macros" }
dynatos-web-parser = { default-features = false, path = "../dynatos-web-parser" }
dynatos-web-ssr    = { default-features = false, optional = true, path = "../dynatos-web-ssr" }
js-sys             = { default-features = false, package = "dynatos-web-dep-js-sys", path = "../dynatos-web-dep-js-sys" }
wasm-bindgen       = { default-features = false, package = "dynatos-web-dep-wasm-bindgen", path = "../dynatos-web-dep-wasm-bindgen" }
web-sys            = { default-features = false, package = "dynatos-web-dep-web-sys", path = "../dynatos-web-dep-web-sys" }

app-error         = { workspace = true }
duplicate         = { workspace = true }
extend            = { workspace = true }
itertools         = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
zutil-inheritance = { optional = true, workspace = true }

[features]
default = ["csr"]

csr  = ["js-sys/csr", "wasm-bindgen/csr", "web-sys/csr"]
ssr  = ["dep:dynatos-web-ssr", "dep:zutil-inheritance", "js-sys/ssr", "sync", "wasm-bindgen/ssr", "web-sys/ssr"]
sync = ["dynatos-store/sync", "dynatos-sync-types/sync"]

[lints]
workspace = true
