[workspace]

members = ["counter"]
resolver = "2"

[workspace.dependencies]

# Parent workspace members
dynatos-context = { path = "../dynatos-context" }
dynatos-egui = { path = "../dynatos-egui" }
dynatos-reactive = { path = "../dynatos-reactive" }
dynatos-util = { path = "../dynatos-util" }

anyhow = "1.0.94"
duplicate = "2.0.0"
eframe = "0.29.0"
extend = "1.2.0"
itertools = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
zutil-cloned = { git = "https://github.com/Zenithsiz/zutil", rev = "92cf40d6242e211fc59c2f702b8d1932ed7aaf8b" }
