[workspace]

members = ["counter", "counter-no-macros", "router", "query"]
resolver = "2"

[workspace.dependencies]

# Parent workspace members
dynatos = { path = "../dynatos" }
dynatos-context = { path = "../dynatos-context" }
dynatos-html = { path = "../dynatos-html" }
dynatos-loadable = { path = "../dynatos-loadable" }
dynatos-reactive = { path = "../dynatos-reactive" }
dynatos-router = { path = "../dynatos-router" }
dynatos-title = { path = "../dynatos-title" }
dynatos-util = { path = "../dynatos-util" }

zutil-cloned = { git = "https://github.com/Zenithsiz/zutil", rev = "978fa5df733d59fc691812ce2fa6072bf901dc7f" }

anyhow = "1.0.98"
console_error_panic_hook = "0.1.7"
duplicate = "2.0.0"
extend = "1.2.0"
itertools = "0.14.0"
js-sys = "0.3.77"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-web = "0.1.3"
url = "2.5.4"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"

[workspace.lints]

# Until `wasm_bindgen` themselves fix it upstream, we can't fix ourselves
rust.wasm_c_abi = "allow"
