[workspace]

members  = ["counter", "counter-no-macros", "dyn-child", "import-html", "query", "router"]
resolver = "2"

[workspace.dependencies]

# Parent workspace members
dynatos-context       = { path = "../dynatos-context" }
dynatos-html          = { path = "../dynatos-html" }
dynatos-html-reactive = { path = "../dynatos-html-reactive" }
dynatos-loadable      = { path = "../dynatos-loadable" }
dynatos-reactive      = { path = "../dynatos-reactive" }
dynatos-router        = { path = "../dynatos-router" }
dynatos-title         = { path = "../dynatos-title" }
dynatos-util          = { path = "../dynatos-util" }

app-error                = "0.1.0"
console_error_panic_hook = "0.1.7"
duplicate                = "2.0.1"
extend                   = "1.2.0"
itertools                = "0.14.0"
js-sys                   = "0.3.91"
tracing                  = "0.1.44"
tracing-subscriber       = "0.3.22"
tracing-web              = "0.1.3"
url                      = "2.5.8"
wasm-bindgen             = "0.2.114"
web-sys                  = "0.3.91"
zutil-cloned             = "0.1.0"

[workspace.lints]
