[workspace]

members  = ["counter", "counter-no-macros", "dyn-children", "dyn-element", "import-html", "query", "router"]
resolver = "2"

[workspace.dependencies]

# Parent workspace members
dynatos-context      = { path = "../dynatos-context" }
dynatos-loadable     = { path = "../dynatos-loadable" }
dynatos-reactive     = { path = "../dynatos-reactive" }
dynatos-util         = { path = "../dynatos-util" }
dynatos-web          = { path = "../dynatos-web" }
dynatos-web-reactive = { path = "../dynatos-web-reactive" }
dynatos-web-router   = { path = "../dynatos-web-router" }
dynatos-web-title    = { path = "../dynatos-web-title" }

app-error                = "0.1.0"
console_error_panic_hook = "0.1.7"
duplicate                = "2.0.1"
extend                   = "1.2.0"
itertools                = "0.14.0"
js-sys                   = "0.3.91"
strum                    = "0.28.0"
tracing                  = "0.1.44"
tracing-subscriber       = "0.3.22"
tracing-web              = "0.1.3"
url                      = "2.5.8"
wasm-bindgen             = "0.2.114"
web-sys                  = "0.3.91"
zutil-cloned             = "0.1.0"

[workspace.lints]
