[package]
name    = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]

dynatos-egui     = { workspace = true }
dynatos-reactive = { workspace = true }
dynatos-util     = { workspace = true }
dynatos-world    = { workspace = true }

anyhow             = { workspace = true }
eframe             = { workspace = true }
extend             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
zutil-cloned       = { workspace = true }
